--- a/src/client.css
+++ b/src/client.css
@@ -1,9 +1,114 @@
+:root{
+    --speed_of_skew: 1s;
+
+}
+
+
+
 .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
+#LaskerChamp_txt{
+    background: linear-gradient(30deg, silver, gold, white, black, );
+     background-size: cover;
+     -webkit-text-fill-color: transparent;
+     -webkit-background-clip: text;
+     -moz-background-clip:text;
+     background-clip:text;
+     text-align:center;
+     /* -webkit-text-stroke: 3px #ffaa00; */
+}
+/* the bottom three options are option for what to display */
+/* #chess_game_txt{
+    text-align: center;
+    font-family: fantasy;
+    font-size: xx-large;
+    -webkit-animation:spin_txt 3s linear infinite alternate;
+    -moz-animation:spin_txt 3s linear infinite alternate;
+    animation:spin_txt 3s linear infinite alternate;
+} */
+/*
+#chess_game_txt{
+    text-align: center;
+    font-family: "Avenir Next";
+    font-style: italic;
+    color:blue;
+    letter-spacing: 0.05em;
+    font-size: xx-large;
+    font-weight:bolder;
+    text-shadow: 1px 1px honeydew
+                 2px 2px azure
+                 3px 3px ghostwhite
+                 4px 4px beige
+                 5px 5px antiquewhite
+                 6px 6px ivory
+                 7px 7px lavenderblush
+                 8px 8px mistyrose
+                 9px 9px white
+                 10px 10px wheat
+                 10px 10px 30px rgba(0,0,0,.7);
+}*/
+#chess_game_txt{
+    font-size: 3cm;
+    text-align: center;
+    letter-spacing: 15px;
+    color:black;
+    transform: skew(-25deg);
+    /* flip the order that way it goes down from the black to the near white */
+    text-shadow: 1px 1px rgb(250, 250, 250),
+                 2px 2px rgb(225, 225, 225),
+                 3px 3px rgb(200, 200, 200),
+                 4px 4px rgb(175, 175, 175),
+                 5px 5px rgb(150, 150, 150),
+                 6px 6px rgb(125, 125, 125),
+                 7px 7px rgb(100, 100, 100),
+                 8px 8px rgb(075, 075, 075),
+                 9px 9px rgb(050, 050, 050),
+                 10px 10px rgb(025, 25, 25),
+                 10px 10px 30px rgba(0,0,0,.7);
 
+    -webkit-animation:spin_txt var(--speed_of_skew) linear infinite alternate;
+    -moz-animation:spin_txt var(--speed_of_skew) linear infinite alternate;
+    animation:spin_txt var(--speed_of_skew) linear infinite alternate;
+}
+
+@-moz-keyframes spin_txt { 
+    100% { -moz-transform: skew(25deg); } 
+}
+@-webkit-keyframes spin_txt { 
+    100% { -webkit-transform: skew(25deg); } 
+}
+@keyframes spin_txt { 
+    100% { 
+        -webkit-transform: skew(25deg); 
+        transform:skew(25deg); 
+    } 
+}
+
+@import url('https://fonts.googleapis.com/css?family=Bangers&display=swap');
+@keyframes rotation {
+  to {
+    transform: rotate(360deg) translateX(-50%) translateY(-50%);
+  }
+}
+h1 {
+    font-size: 8em;
+    letter-spacing: 15px;
+    transform: rotate(-10deg);
+    text-shadow: 1px 1px hsl(50, 50%, 45%),
+                 2px 2px hsl(50, 50%, 40%),
+                 3px 3px hsl(50, 50%, 35%),
+                 4px 4px hsl(50, 50%, 34%),
+                 5px 5px hsl(50, 50%, 33%),
+                 6px 6px hsl(50, 50%, 32%),
+                 7px 7px hsl(50, 50%, 31%),
+                 8px 8px hsl(50, 50%, 30%),
+                 9px 9px hsl(50, 50%, 29%),
+                 10px 10px hsl(50, 50%, 28%),
+                 10px 10px 30px rgba(0,0,0,.7);
+  }
 button{
     width:fit-content;
     background-color: gold;
@@ -108,9 +213,7 @@ body{
 }
 #switch_to_game{
     width:10%;
-    position: absolute;
-    top:50%;
-    left:50%;
+    position: relative;
     transform: translate(-50%, -50%);
 }
 @-moz-keyframes spin { 
