--- a/src/styles/client.css
+++ b/src/styles/client.css
@@ -9,6 +9,24 @@ button:active{
     cursor: grabbing;
 }
 
+/* width */
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 50px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: darkslategray;
+    border-radius: 50px;
+}
+
+
 .crownBtn{
     width: fit-content;
     float: left;
@@ -38,33 +56,40 @@ body{
     padding: 5px;
 }
 
+#container{
+    width: 100%;
+    background-color: darkslategray;
+    padding: 5px;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+}
+
+
 #user_data{
     width: 15%;
     min-width: 150px;
-    background-color: gray;
     border-radius: 20px;
     padding: 10px;
-    float: left;
+    background-color: gray;
 }
 
 #game_container{
     width: 35%;
     min-width: 300px;
-    float: left;
-    margin-left: 10%;
 }
 
 #game_controls{
-    width: 16%;
-    min-width: 150px;
-    background-color: gray;
+    width: 15%;
+    min-width: 200px;
     border-radius: 20px;
     padding: 10px;
-    float: right;
-    margin-right: 5%;
-    margin-top: 5%;
 }
 
+#preMoveOpt{
+    width: fit-content;
+    margin: 10px auto;
+}
 #myBoard{
     width: 100%;
     height: auto;
@@ -93,8 +118,8 @@ body{
     display: None;
 }
 #pgnDisplay{
-    height: 400px;
-    border:1px black solid;
+    height: 600px;
+    border:5px gray solid;
     padding: 5px;
     overflow-y:auto;
     background-color:black;
@@ -189,3 +214,71 @@ body{
 #whiteCrownOpt{
     display: none;
 }
+
+#settings{
+    width: fit-content;
+    margin: 10px auto;
+}
+
+/* The switch - the box around the settingsSlider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 38px;
+    height: 23px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The settingsSlider */
+  .settingsSlider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .settingsSlider:before {
+    position: absolute;
+    content: "";
+    height: 15px;
+    width: 15px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .settingsSlider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .settingsSlider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .settingsSlider:before {
+    -webkit-transform: translateX(15px);
+    -ms-transform: translateX(15px);
+    transform: translateX(15px);
+  }
+  
+  /* Rounded settingssettingsSliders */
+  .settingsSlider.round {
+    border-radius: 34px;
+  }
+  
+  .settingsSlider.round:before {
+    border-radius: 50%;
+  }
