--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -17,6 +17,7 @@ body{
     background-color: dimgray;
     padding: 15px;
     border-radius: 30px;
+    position: relative;
 }
 
 .form_group{
@@ -48,4 +49,24 @@ body{
 
 a{
     color: blue;
+}
+
+#loader {
+    position: absolute;
+    top: 100px;
+    left: 80px;
+    border-top: 16px solid blue;
+    border-right: 16px solid green;
+    border-bottom: 16px solid red;
+    border-left: 16px solid pink;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    display: none;
+  }
+  
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
