--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -10,8 +10,7 @@ body{
 }
 
 #form-container{
-    width: 30%;
-    max-width: 500px;
+    width: 400px;
     margin: auto;
     margin-top: 100px;
     background-color: dimgray;
