--- a/src/styles/client.css
+++ b/src/styles/client.css
@@ -61,6 +61,9 @@ body{
 #clock_options{
     margin: 10px auto;
     background-color: rgb(124, 124, 153);
+    padding: 5px;
+    border-radius: 20px;
+    font-family: cursive;
 }
 
 #container{
