--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -1,9 +1,41 @@
 #stats{
-    background-color: blueviolet;
     padding: 10px;
     border-radius: 20px;
     margin-bottom: 10px;
     border-spacing: 5px;
-    font-size: large;
-    margin: 0 auto;
+    font-size: xx-large;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    margin: 20px 0;
+}
+  
+th, td {
+    text-align: left;
+    padding: 8px;
+    border: 1px solid #ddd;
+}
+
+th {
+    background-color: #4CAF50;
+    color: white;
+}
+
+#charts{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.dChart{
+    max-width: 100%;
+}
+
+.chart{
+    width: 35%
 }
