--- a/src/styles/client.css
+++ b/src/styles/client.css
@@ -41,20 +41,32 @@ button:active{
 }
 
 .gameBtn{
-    width: 100%;
-    padding: 5px;
+    width: 80%;
+    padding: 10px;
     border-radius: 5px;
-    margin-bottom: 5px;
+    margin: 10px 10%;
+    font-size: x-large;
 }
 
+#startBtn{
+    background-color: green;
+    color: white;
+}
+#msg_box{
+    position: absolute;
+    z-index: 10;
+    /* opacity: 0.5; */
+    font-size: xx-large;
+    text-align: center;
+    width: 100%;
+    display: none;
+}
 .clearfix{
     clear: both;
 }
 
 body{
-    overflow: hidden;
     background-color: darkslategray;
-    padding: 5px;
     display: none;
 }
 
@@ -67,29 +79,35 @@ body{
 }
 
 #container{
-    width: 100%;
+    width: fit-content;
+    margin: 0 auto;
     background-color: darkslategray;
     padding: 5px;
     display: flex;
     justify-content: space-around;
-    align-items: flex-start;
+    flex-direction: row;
+    margin-top: 10px;
 }
 
-
-#user_data{
-    width: 150px;
-    border-radius: 20px;
-    padding: 10px;
-    background-color: gray;
+#game_type{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 2vh;
+}
+
+.game_type_btn{
+    width: 25%;
+    background-color: slategray;
+    padding: 5px;
+    font-size: x-large;
+    text-align: center;
 }
 
 #game_container{
-    width: 35%;
-    max-width: 500px;
-    min-width: 300px;
-    flex-grow: 2;
+    position: relative;
+    width: 300px;
+    margin-right: 30px;
 }
 
 #game_controls{
@@ -127,28 +145,79 @@ body{
     display: None;
 }
 #pgnDisplay{
-    height: 400px;
-    width: 100%;
-    border:5px gray solid;
-    padding: 5px;
-    overflow-y:auto;
-    background-color:black;
-    border-radius: 20px;
     color: cornsilk;
     font-family: 'Courier New', Courier, monospace;
     font-size: large;
 }
 
-
-#StatusDisplay{
+#status{
     width: 100%;
-    border-radius: 20px;
-    padding:6px;
-    border:5px black solid;
-    height: 50px;
-    font-size: small;
-    font-family: 'Courier New', Courier, monospace;
-    background-color: lightseagreen;
+    height: 30px;
+    border: 1px solid black;
+    text-align: center;
+    font-size: large;
+    color: white;
+    font-family: cursive;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: large;
+}
+
+.clock_type{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 1vh auto;
+}
+
+.clock_time{
+    text-align: center;
+    padding: 10px;
+    width: 25%;
+    background-color: slategrey;
+}
+
+#clocks{
+    width: 100%;
+    min-width: 100%;
+}
+
+.game_type_display{
+    margin-top: 20px;
+}
+
+#con{
+    width: 30%;
+    background-color: #272922;
+    margin-right: 10px;
+    overflow-y: scroll;
+}
+
+#toggles{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.toggle{
+    color: white;
+    width: 33%;
+    border: 1px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 0px;
+}
+
+#toggles_content{
+    background-color: #272922;
+    color: azure;
+    padding: 5px;
+}
+
+.toggle_content{
+    padding: 20px;
 }
 
 #copyBtns{
@@ -160,37 +229,32 @@ body{
     border: 2px solid black;
 }
 
-#quitBtn{
-    display: none;
-}
-
 #clocks{
     width: fit-content;
     margin: 2px auto;
 }
-#opponent_info{
-    padding: 5px;
-    border: 1px solid black;
-    width: 50%;
-    margin: 5px auto;
-    background-color: palevioletred;
-}
+
 .clock{
     width: fit-content;
     padding: 2px;
     border: 1px black solid;
     background-color: gray;
     font-family: cursive;
-    font-size: xx-large;
+    font-size: large;
     display: inline;
+    float: right;
+    height: 20px;
+    text-align: center;
+    margin: 5px;
 }
 
-#logoutBtn{
-    width: 100%;
-    margin-top: 15px;
+.playerInfo{
+    float: left;
+    height: 10px;
+    width: fit-content;
     padding: 5px;
-    border-radius: 5px;
-    background-color: green
+    font-size: large;
+    color: antiquewhite;
 }
 
 #box{
@@ -216,12 +280,14 @@ body{
 }
 
 #level_display{
+    margin-top: 20px;
     width: fit-content;
+    font-size: xx-large;
     margin: auto;
 }
 
 
-#settings{
+#settings_t{
     margin: 10px auto;
     width: fit-content;
     margin: 0 auto;
@@ -231,8 +297,8 @@ body{
 .switch {
     position: relative;
     display: inline-block;
-    width: 38px;
-    height: 23px;
+    width: 100px;
+    height: 50px;
   }
   
   /* Hide default HTML checkbox */
@@ -258,10 +324,10 @@ body{
   .settingsSlider:before {
     position: absolute;
     content: "";
-    height: 15px;
-    width: 15px;
-    left: 4px;
-    bottom: 4px;
+    height: 45px;
+    width: 45px;
+    left: 3px;
+    top: 3px;
     background-color: white;
     -webkit-transition: .4s;
     transition: .4s;
@@ -276,12 +342,10 @@ body{
   }
   
   input:checked + .settingsSlider:before {
-    -webkit-transform: translateX(15px);
-    -ms-transform: translateX(15px);
-    transform: translateX(15px);
+    left: calc(100% - 48px); /* Updated value */
   }
   
-  /* Rounded settingssettingsSliders */
+  /* Rounded settingsSlider */
   .settingsSlider.round {
     border-radius: 34px;
   }
@@ -289,47 +353,13 @@ body{
   .settingsSlider.round:before {
     border-radius: 50%;
   }
-
+  
 .data_item{
     text-align: center;
     margin-bottom: 8px;
 }
 
-@media only screen and (max-width: 1000px){
-    #container{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    #user_data{
-        width: 70%;
-        min-width: 300px;
-        height: 200px;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: space-around;
-        margin-bottom: 10px;
-    }
-    .data_item{
-        width: 30%;
-    }
-    #user_info{
-        width: 100%;
-    }
-    #game_container{
-        max-width: none;
-    }
-    #game_controls{
-        display: flex;
-        flex-direction: column;
-        width: 80%;
-        display: none;
-    }
-    #pgnDisplay{
-        height: 200px;
-    }
-    #StatusDisplay{
-        height: 25px;
-    }
+.settings-name{
+    padding: 5px;
+    font-size: larger;
 }
