--- a/src/styles/client.css
+++ b/src/styles/client.css
@@ -26,6 +26,51 @@ button:active{
     border-radius: 50px;
 }
 
+#chat-box {
+  width: 90%;
+  height: 400px;
+  border: 1px solid black;
+  overflow-y: auto;
+  margin: 10px auto;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  background: #393333;
+}
+.message {
+  padding: 8px 12px;
+  border-radius: 15px;
+  max-width: 80%;
+}
+.self {
+  align-self: flex-end;
+  background-color: darkgreen;
+}
+.other {
+  align-self: flex-start;
+  background-color: darkslategray;
+}
+#input-container {
+  display: flex;
+    width: 95%;
+    margin: 10px auto;
+}
+#chat-input {
+  flex: 1;
+  padding: 5px;
+    background-color: #404040;
+    border: 1px solid black;
+}
+#chat-input:focus {
+  outline: none;
+  border: 1px solid gray;
+}
+#send-btn {
+  padding: 5px 10px;
+    background-color: gray;
+}
+
 
 
 .crownBtn{
